[gd_scene load_steps=2 format=3 uid="uid://b7v4yq2wkl8j"]

[ext_resource type="Script" uid="uid://ygc5prmvpa8d" path="res://scenes/patterns/state_machine/traffic_light_view.gd" id="1_abcde"]

[node name="TrafficLight" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_abcde")

[node name="TrafficLightBody" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 50.0
offset_bottom = 150.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="RedLight" type="ColorRect" parent="TrafficLightBody"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_top = 10.0
offset_right = 15.0
offset_bottom = 40.0
grow_horizontal = 2
color = Color(0.1, 0, 0, 1)

[node name="YellowLight" type="ColorRect" parent="TrafficLightBody"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0, 1)

[node name="GreenLight" type="ColorRect" parent="TrafficLightBody"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -40.0
offset_right = 15.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0.1, 0, 1)

[node name="TrafficLightBody2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 101.0
offset_right = 98.0
offset_bottom = 150.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="ArrowIndicator" type="Polygon2D" parent="TrafficLightBody2"]
unique_name_in_owner = true
position = Vector2(20, 24)
scale = Vector2(0.5, 0.5)
color = Color(0.5, 0.5, 0.5, 1)
polygon = PackedVector2Array(0, -20, 40, 0, 0, 20, 0, 10, -20, 10, -20, -10, 0, -10)
